# dsidmspt

./: README.md  setup.cfg  setup.py
dsidmspt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dsidmspt/generator/: os_event_generator.py
dsidmspt/utils/: common.py  get_schema_from_openstack_doc.py  os_event_parser.py
