[metadata]
name = dsidmspt
author = xiaojueguan
author-email = xiaojueguan@google.com
summary = PreOBjjcL0UD
description-file = dsidmspt
    README.md
home-page = https://github.com/albertjone/dsidmspt
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
